Bug 159456 - FILEOPEN XLSX Y axis labels have different values if data table is enabled
Summary: FILEOPEN XLSX Y axis labels have different values if data table is enabled
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2024-01-30 14:54 UTC by Gabor Kelemen (Collabora)
Modified: 2024-03-10 22:17 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel 2016 (17.47 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2024-01-30 14:54 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the example file in Excel 2016 and Calc (98.89 KB, image/png)
2024-01-30 14:54 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-01-30 14:54:35 UTC
Created attachment 192263 [details]
Example file from Excel 2016

Attached example file has a chart with data table enabled and the same chart without data table.
In case of the chart with data table the Y axis labels don't match the layout and numbering in Excel, but in case of the chart without data table the Y axis labels match the ones in Excel.

1. Open attached file
-> notice the Y axis labels are not 0, 50, ... 300 but 25, 75, ... 275 in the top chart, and 0, 50, ... 300 in the bottom chart.

The only difference is the lack of data table in the bottom one.

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d49b0c3654e50ff9b74545140e6f19e008009c33
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2024-01-30 14:54:56 UTC
Created attachment 192264 [details]
Screenshot of the example file in Excel 2016 and Calc
Comment 2 Gerald Pfeifer 2024-02-18 14:28:12 UTC
I noticed the same with attachment #166646 [details] of bug #137691.

Confirmed with

  Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: 5a4ab8cb3a3fbf15de11afc5d8876aaa8a7784c9
  CPU threads: 12; OS: Linux 6.7; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

Regression between 7.3.8 and 7.5.6. Enabling one feature (data table)
should not affect an orthogonal feature (y-axis labeling).
Comment 3 Aron Budea 2024-02-20 07:19:27 UTC
This started with the following commit, bibisected using repo bibisect-linux-64-7.5. Adding CC: to Tomaž Vajngerl.

The commit message gives a justification, but at least in this case it doesn't seem to be a problem, so I'm not sure if it always has to be done this way.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=d50bfb406900ddea3a4b2e0c59e0b983798780d4
author		Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2022-08-13 23:29:01 +0200
committer	Tomaž Vajngerl <quikee@gmail.com>	2022-08-17 08:23:23 +0200

"chart2: for a data table we need to force shift category position

To be able to show the data table correctly we need to always
show the categories "between tick marks" as otherwise the table
columns wouldn't align correctly. This forces that the shift
position is always enabled."
Comment 4 Commit Notification 2024-03-08 08:43:27 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/40a19e61efff859d83e0689c0ed7d40c8e9ae8fe

tdf#159456 - chart view: fix wrongly shifted value Y axis

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Gerald Pfeifer 2024-03-10 22:17:22 UTC
Happily verified with today's nightly build

  Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: 1fd359790ed4a27902248d92ee343a4aeaf63c8e
  CPU threads: 12; OS: Linux 6.7; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

Similarly verified with attachment #166646 [details] of bug #137691 which I
mentioned in comment #2.