chart2/source/view/main/SeriesPlotterContainer.hxx
@@ -151,7 +151,7 @@ private:
     sal_Int32 m_nMaxAxisIndex;
 
     bool m_bChartTypeUsesShiftedCategoryPositionPerDefault;
-    bool m_bForceShiftPosition = false;
+    bool m_bTableShiftPosition = false;
     sal_Int32 m_nDefaultDateNumberFormat;
 };
 
